--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -56,18 +56,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ilhamhanifan/thecapstone-manifest
-          path: ""
-          fetch-depth: 1
-
-      - name: Set Up yq
-        run: |
-          wget https://github.com/mikefarah/yq/releases/download/v4.35.2/yq_darwin_amd64 -O /usr/bin/yq
-          chmod +x /usr/bin/yq
       
       - name: Update Helm Values
-        run: |
-          IMAGE_NAME="${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"
-          template.spec.containers[0].image = \"$IMAGE_NAME\"" helm/dev/templates/deployment.yamlyq e ".spec.template.
+        uses: mikefarah/yq@v4.35.2
+        with:
+          cmd: |
+            IMAGE_NAME="${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"
+            yq e ".spec.template.spec.containers[0].image = \"$IMAGE_NAME\"" helm/dev/templates/deployment.yaml
 
       - name: Setup Manifest repository
         run: |
