--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           cmd: |
             IMAGE_NAME="${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"
-            yq e ".spec.template.spec.containers[0].image = \"$IMAGE_NAME\"" helm/dev/templates/deployment.yaml
+            yq e ".spec.template.spec.containers[0].image = "$IMAGE_NAME"" helm/dev/templates/deployment.yaml
 
       - name: Setup Manifest repository
         run: |
