--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -61,8 +61,9 @@ jobs:
         uses: mikefarah/yq@v4.35.2
         with:
           cmd: |
-            IMAGE_NAME="${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"
-            yq e ".spec.template.spec.containers[0].image = "$IMAGE_NAME"" helm/dev/templates/deployment.yaml
+            yq e ".spec.template.spec.containers[0].image = \
+              "${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"" \
+              helm/dev/templates/deployment.yaml
 
       - name: Setup Manifest repository
         run: |
