--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           cmd: |
             yq e ".spec.template.spec.containers[0].image = \
-              "${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"" \
+              ${{ vars.ARTIFACT_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.sha }}" \
               helm/dev/templates/deployment.yaml
 
       - name: Setup Manifest repository
