--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ilhamhanifan/thecapstone-manifest
-          token: ${{ secrets.GITHUB_PAT }}
+          token: ${{ secrets.GH_PAT}}
       
       - name: Update Helm Values
         uses: mikefarah/yq@v4.35.2
